<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Newspaper</string>
    <string name="app_version">Version %s</string>
    <string name="error_no_connection">No internet connection</string>
    <string name="empty_news_title">We couldn\'t find any news for you</string>
    <string name="empty_news_description">Please try again later</string>
    <string name="empty_bookmark_title">You don\'t have any favorite news yet</string>
    <string name="empty_bookmark_description">Tap on the bookmark icon to collect news here</string>
    <string name="share_to">Share to…</string>
    <string name="rate_app">Rate 5 stars</string>
    <string name="update_indicator">New news available</string>
    <string name="loading_indicator">Loading…</string>
    <string name="time_ago_now">Just now</string>
    <string name="time_ago_minute">A minute ago</string>
    <string name="time_ago_minutes">%s minutes ago</string>
    <string name="time_ago_hour">An hour ago</string>
    <string name="time_ago_hours">%s hours ago</string>
    <string name="time_ago_day">Yesterday</string>
    <string name="time_ago_days">%s days ago</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="go_back">Previous category</string>
    <string name="go_next">Next category</string>
    <string name="action_settings">Settings</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="action_share">Share</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh</string>
    <string name="pref_general">General</string>
    <string name="pref_design">Design</string>
    <string name="pref_compact_layout">Compact layout</string>
    <string name="pref_dark_theme">Dark theme</string>
    <string name="pref_header_image_enabled">Show header image</string>
    <string name="pref_panorama_enabled">Enable panorama effect</string>
    <string name="pref_categories">Categories</string>
    <string-array name="pref_category_short_entries">
        <item>Top</item>
        <item>HK</item>
        <item>World</item>
        <item>Int\'l</item>
        <item>Bilateral</item>
        <item>Econ</item>
        <item>Finc</item>
        <item>Real Est</item>
        <item>Ent</item>
        <item>HK Ent</item>
        <item>Int\'l Ent</item>
        <item>Sports</item>
        <item>Basketball</item>
        <item>Other Sports</item>
        <item>Supplement</item>
        <item>Tech</item>
        <item>Travel</item>
        <item>Food</item>
        <item>Lifestyle</item>
        <item>Health</item>
        <item>Others</item>
    </string-array>
    <string-array name="pref_category_entries">
        <item>Top News</item>
        <item>Hong Kong</item>
        <item>World News</item>
        <item>International</item>
        <item>Bilateral</item>
        <item>Economy</item>
        <item>Finance</item>
        <item>Real Estate</item>
        <item>Entertainment</item>
        <item>Hong Kong Entertainment</item>
        <item>International Entertainment</item>
        <item>Sports</item>
        <item>Basketball</item>
        <item>Other Sports</item>
        <item>Supplement</item>
        <item>Technology</item>
        <item>Travel</item>
        <item>Food</item>
        <item>Lifestyle</item>
        <item>Health</item>
        <item>Others</item>
    </string-array>
    <string-array
        name="pref_category_values"
        translatable="false">
        <item>https://hk.news.yahoo.com/rss/</item>
        <item>https://hk.news.yahoo.com/rss/hong-kong</item>
        <item>https://hk.news.yahoo.com/rss/world</item>
        <item>https://hk.news.yahoo.com/rss/intl</item>
        <item>https://hk.news.yahoo.com/rss/china</item>
        <item>https://hk.news.yahoo.com/rss/business</item>
        <item>https://hk.news.yahoo.com/rss/hongkong-business</item>
        <item>https://hk.news.yahoo.com/rss/property</item>
        <item>https://hk.news.yahoo.com/rss/entertainment</item>
        <item>https://hk.news.yahoo.com/rss/hongkong-entertainment</item>
        <item>https://hk.news.yahoo.com/rss/international-entertainment</item>
        <item>https://hk.news.yahoo.com/rss/sports</item>
        <item>https://hk.news.yahoo.com/rss/basketball</item>
        <item>https://hk.news.yahoo.com/rss/other-sports</item>
        <item>https://hk.news.yahoo.com/rss/supplement</item>
        <item>https://hk.news.yahoo.com/rss/tech</item>
        <item>https://hk.news.yahoo.com/rss/travel</item>
        <item>https://hk.news.yahoo.com/rss/food</item>
        <item>https://hk.news.yahoo.com/rss/living</item>
        <item>https://hk.news.yahoo.com/rss/health</item>
        <item>https://hk.news.yahoo.com/rss/other-supplement</item>
    </string-array>
</resources>
