<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.preference.PreferenceCategory android:title="@string/pref_general">
        <android.support.v14.preference.MultiSelectListPreference
            android:key="PREF_SOURCES"
            android:title="@string/pref_sources"
            android:entries="@array/sources"
            android:entryValues="@array/pref_source_items"
            android:defaultValue="@array/pref_source_items" />
        <android.support.v14.preference.MultiSelectListPreference
            android:key="PREF_CATEGORIES"
            android:title="@string/pref_categories"
            android:entries="@array/categories"
            android:entryValues="@array/pref_category_items"
            android:defaultValue="@array/pref_category_items" />
        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="PREF_AUTO_PLAY"
            android:title="@string/pref_auto_play"
            android:defaultValue="false" />
    </android.support.v7.preference.PreferenceCategory>
    <android.support.v7.preference.PreferenceCategory android:title="@string/pref_design">
        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="PREF_COMPACT_LAYOUT"
            android:title="@string/pref_compact_layout"
            android:defaultValue="true" />
        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="PREF_DARK_THEME"
            android:title="@string/pref_dark_theme"
            android:defaultValue="false" />
        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="PREF_HEADER_IMAGE_ENABLED"
            android:title="@string/pref_header_image_enabled"
            android:defaultValue="true" />
        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="PREF_PANORAMA_ENABLED"
            android:title="@string/pref_panorama_enabled"
            android:defaultValue="true" />
    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>
