<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/primaryColor"
    android:orientation="vertical">
    <include layout="@layout/view_statusbar_padding" />
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <ImageView
            android:id="@+id/drawer_close"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            android:paddingRight="@dimen/space_3"
            android:paddingEnd="@dimen/space_3"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:tint="?attr/indicatorColor"
            app:srcCompat="@drawable/ic_close_white_24px" />
    </android.support.v7.widget.Toolbar>
    <TextView
        android:id="@+id/action_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/space_5"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/action_settings"
        style="@style/DrawerMenuItem" />
    <TextView
        android:id="@+id/action_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/space_5"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/action_about"
        style="@style/DrawerMenuItem" />
</LinearLayout>
